# DxLibSpineViewer

./: .gitignore  CMakeLists.txt  DxLibSpineViewer.sln  DxlibSpineTest.sln  README.md
DxLibSpineC/: dxlib_spine_c.cpp  dxlib_spine_c.h  dxlib_spine_player_c.cpp  dxlib_spine_player_c.h  spine_loader_c.h  spine_player_c.cpp  spine_player_c.h
DxLibSpineC/Spine21/: dxlib_spine_c_21.cpp  dxlib_spine_c_21.h
DxLibSpineCpp/: dxlib_spine.cpp  dxlib_spine.h  dxlib_spine_player.cpp  dxlib_spine_player.h  spine_player.cpp  spine_player.h
DxlibSpineTest/: DxlibSpineTest.vcxproj  DxlibSpineTest.vcxproj.filters  dxlib_spine.cpp  dxlib_spine.h  dxlib_spine_player.cpp  dxlib_spine_player.h  main.cpp  main_window.cpp  main_window.h  spine_manipulator_dialogue.cpp  spine_manipulator_dialogue.h  spine_setting_dialogue.cpp  spine_setting_dialogue.h
DxlibSpineTestC/: DxlibSpineTestC.vcxproj  DxlibSpineTestC.vcxproj.filters  dxlib_spine_c.cpp  dxlib_spine_c.h  dxlib_spine_player_c.cpp  dxlib_spine_player_c.h  spine_loader_c.cpp
projects/DxLibSpineViewer-3.8/: DxLibSpineViewer-3.8.vcxproj  DxLibSpineViewer-3.8.vcxproj.filters  pch.h
projects/DxLibSpineViewer-4.0/: DxLibSpineViewer-4.0.vcxproj  DxLibSpineViewer-4.0.vcxproj.filters
projects/DxLibSpineViewer-4.1/: DxLibSpineViewer-4.1.vcxproj  DxLibSpineViewer-4.1.vcxproj.filters
projects/DxLibSpineViewer-4.2/: DxLibSpineViewer-4.2.vcxproj  DxLibSpineViewer-4.2.vcxproj.filters
projects/DxLibSpineViewerC-2.1/: DxLibSpineViewerC-2.1.vcxproj  DxLibSpineViewerC-2.1.vcxproj.filters  dxlib_spine_c_21.cpp  dxlib_spine_c_21.h
projects/DxLibSpineViewerC-3.5/: DxLibSpineViewerC-3.5.vcxproj  DxLibSpineViewerC-3.5.vcxproj.filters
projects/DxLibSpineViewerC-3.6/: DxLibSpineViewerC-3.6.vcxproj  DxLibSpineViewerC-3.6.vcxproj.filters  pch.h
projects/DxLibSpineViewerC-3.7/: DxLibSpineViewerC-3.7.vcxproj  DxLibSpineViewerC-3.7.vcxproj.filters
projects/DxLibSpineViewerC-4.1/: DxLibSpineViewerC-4.1.vcxproj  DxLibSpineViewerC-4.1.vcxproj.filters
runtime/: CMakeLists.txt  dxlib_spine_dll.cpp  dxlib_spine_dll.h  spine_file_verifier.cpp  spine_file_verifier.h  spine_player_dll.cpp  spine_player_dll.h
runtime/DxLibSpineC/: dxlib_spine_c.cpp  dxlib_spine_c.h  dxlib_spine_player_c.cpp  dxlib_spine_player_c.h  spine_player_c.cpp  spine_player_c.h
runtime/DxLibSpineC/Spine21/: dxlib_spine_c_21.cpp  dxlib_spine_c_21.h
runtime/DxLibSpineCpp/: dxlib_spine.cpp  dxlib_spine.h  dxlib_spine_player.cpp  dxlib_spine_player.h  spine_player.cpp  spine_player.h
shared-src/: cpu.cpp  dialogue_controls.cpp  dialogue_controls.h  dxlib_image_encoder.cpp  dxlib_image_encoder.h  dxlib_init.cpp  dxlib_map.cpp  dxlib_recorder.cpp  dxlib_recorder.h  export_setting_dialogue.cpp  export_setting_dialogue.h  framework.h  main.cpp  main_window.cpp  main_window.h  mf_video_encoder.cpp  mf_video_encoder.h  spine_atlas_dialogue.cpp  spine_atlas_dialogue.h  spine_manipulator_dialogue.cpp  spine_manipulator_dialogue.h  spine_player_shared.h  spine_setting_dialogue.cpp  spine_setting_dialogue.h  win_clock.cpp  win_dialogue.cpp  win_dialogue.h  win_filesystem.cpp  win_filesystem.h  win_font.cpp  win_font.h  win_image.cpp  win_image.h
shared-src/dxlib-imgui/: spine_tool_dialogue.cpp  spine_tool_dialogue.h
shared-src/native-ui/: dialogue_controls.cpp  dialogue_controls.h  dialogue_layout.h  dialogue_template.cpp  dialogue_template.h  export_setting_dialogue.cpp  font_setting_dialogue.cpp  spine_atlas_dialogue.cpp  spine_atlas_dialogue.h  spine_manipulator_dialogue.cpp  spine_manipulator_dialogue.h  spine_setting_dialogue.cpp  spine_setting_dialogue.h  spine_tool_dialogue.cpp  spine_tool_dialogue.h  spine_tool_tabs.cpp  spine_tool_tabs.h  window_menu.h
viewer/: CMakeLists.txt  cpu.h  dxlib_image_encoder.h  dxlib_map.h  dxlib_recorder.cpp  main.cpp  main_window.cpp  main_window.h  mf_video_encoder.cpp  spine_player_dynamic.cpp  spine_player_dynamic.h  win_clock.h  win_dialogue.h  win_image.cpp  win_image.h
viewer/dxlib-imgui/: dxlib_imgui.cpp  dxlib_imgui.h  spine_tool_dialogue.cpp  spine_tool_dialogue.h
viewer/native-ui/: dialogue_controls.cpp  dialogue_template.cpp  font_setting_dialogue.h  spine_setting_dialogue.cpp  spine_setting_dialogue.h
